kubernetes/apps/observability/kube-prometheus-stack/config/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "grafana.aknuk.dev"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
